style.css
:root {
  /* Primary Colors */
  --soft-orange: hsl(35, 77%, 62%);
  --soft-red: hsl(5, 85%, 63%);

  /* Neutral Colors */
  --off-white: hsl(36, 100%, 99%);
  --grayish-blue: hsl(233, 8%, 79%);
  --dark-grayish-blue: hsl(236, 13%, 42%);
  --very-dark-blue: hsl(240, 100%, 5%);
}

* {
  margin: 0;
  padding: 0;
  font-size: 0.938rem;
}

html {
  width: 100%;
  height: 100%;
}

main {
  width: 100%;
}
body {
  min-height: 100vh;
  padding: 2rem;
  font-family: "Inter", sans-serif;
  display: flex;
  flex-flow: column;
  justify-content: center;
  align-items: center;
}

header {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.5rem;
  margin-bottom: 1.5rem;
}

.header-logo {
  max-width: 2.5rem;
}

.menu_open_btn {
  background: transparent;
  border: none;
  cursor: pointer;
}

picture img {
  max-width: 100%;
}

h1 {
  font-size: 2.7rem;
  font-weight: 800;
  color: var(--very-dark-blue);
  line-height: 1.1;
  margin-top: 1.5rem;
}

.main-article-content {
  margin: 1.5rem 0 3rem 0;
}
.main-article p {
  color: var(--dark-grayish-blue);
  line-height: 1.5;
}

.main-article_readmore-btn {
  display: block;
  cursor: pointer;
  background: var(--soft-red);
  border: none;
  padding: 0.8rem 2rem;
  text-transform: uppercase;
  font-weight: 800;
  letter-spacing: 0.16rem;
  color: var(--very-dark-blue);
  margin-top: 1rem;
  font-size: 0.75rem;
  width: fit-content;
  
}

.main-article_readmore-btn:hover {
  background-color: var(--very-dark-blue);
  color: var(--off-white);
  font-weight: 600;
}
.new-articles-section {
  background-color: var(--very-dark-blue);
  padding: 1.5rem;
  display: flex;
  flex-flow: column;
  justify-content: space-between;
}

.new-articles-section h2 {
  color: var(--soft-orange);
  font-size: 2.1rem;
  font-weight: 600;
}

.new-article {
  color: var(--off-white);
  line-height: 1.5;
  padding: 1.5rem 0;
}

.new-article a {
  font-weight: 700;
  font-size: 1.2rem;
}

.new-article a:hover {
  color: var(--soft-orange);
}
.new-article p {
  color: var(--grayish-blue);
}
.new-articles_separator {
  border-top: 1px solid var(--grayish-blue);
  opacity: 0.5;
}

.top3-articles-section {
  margin-top: 1rem;
  display: flex;
  flex-flow: row wrap;
  width: 100%;
}

.top3-article {
  display: flex;
  margin-top: 2rem;
  padding: 0.5rem;
  flex: auto;
  width: auto;
}

.top3-article-info {
  display: flex;
  flex-flow: column;
  justify-content: space-between;
  margin-left: 1rem;
}

.top3-article_position {
  color: var(--soft-red);
  font-size: 2.1rem;
  font-weight: 800;
  grid-area: number;
}

.top3-article img {
  grid-area: picture;
  min-height: 100%;
  max-height: 7rem;
  width: auto;
}

.top3-article_title {
  grid-area: title;
  font-weight: 700;
  color: var(--very-dark-blue);
  padding: 0.5rem 0;
  font-size: 1.2rem;
}

.top3-article_content {
  grid-area: text;
  color: var(--dark-grayish-blue);
}

footer {
  text-align: center;
  background-color: var(--off-white);
  color: var(--very-dark-blue);
  font-weight: 600;
  padding-top: 2rem;
}

footer p {
  font-size: 0.7rem;
}

footer a {
  font-size: 0.8rem;
  color: var(--soft-red);
}

.desktop-nav {
  display: none;
}

.desktop-nav a {
  text-decoration: none;
  color: var(--dark-grayish-blue);
  cursor: pointer;
}

.desktop-nav a:hover {
  color: var(--soft-red);
}

.top3-article a:hover {
  color: var(--soft-red);
}
a {
  cursor: pointer;
  transition: 0.2s ease-in-out;
}

@media screen and (min-width: 70rem) {
  body {
    padding: 5rem;
    max-height: 100%;
  }

  main, header {
    max-width: 80%;
  }
  section {
    display: grid;
    padding: 0;
    gap: 1rem;
    max-width: 100%;
    grid-template-columns: 2fr 1fr 1fr;
    grid-template-areas: "mainArticle mainArticle newsSection" "mainArticle mainArticle newsSection" "top3 top3 top3";
  }

  .main-article {
    grid-area: mainArticle;
    display: grid;
    grid-template-areas: "mainArticle-picture mainArticle-picture" "mainArticle-title mainArticle-content";
  }

  .main-article picture {
    grid-area: mainArticle-picture;
  }

  .main-article h1 {
    grid-area: mainArticle-title;
    width: 65%;
  }
  .new-articles-section {
    grid-area: newsSection;

  }

  .main-article-content {
    width: 85%;
  }
  .top3-articles-section {
    display: grid;
    grid-template-columns:repeat(3, auto);
    grid-area: top3;
  }

 
  .top3-article-info p {
    width: 70%;
    margin-top: 0.5rem;
  }

  .menu_open_btn {
    display: none;
  }

  .desktop-nav {
    display: block;
    width: auto;
  }

  li {
    list-style-type: none;
    display: inline;
    padding-left: 3rem;
  }


}

